robballen75-Salesforce/4-7-15/src/objects/LicenseKeyInformation__c.object
<CustomObject>
    <description>This custom object holds the various license key information for an account</description>
    <fields>
        <fullName>Linked_Account__c</fullName>
        <description>The account linked to the Licence Key Info object.</description>
        <label>Linked Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>License Key Information</relationshipLabel>
        <relationshipName>AccountLicenceKey</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Microsystems_FC_Install_Key__c</fullName>
        <description>The installation key for a French Canadian version of DocXtools.</description>
        <label>French Canadian Install Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsystems_Install_Key__c</fullName>
        <description>The install key for Microsystems DocXtools.  Determines the modules available, default language, and industry.</description>
        <label>Microsystems Install Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3BClean_License_Key_Account__c</fullName>
        <description>The Account name used to generate the 3BClean license key.</description>
        <label>3BClean License Key Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3BClean_License_Key_Expiration__c</fullName>
        <description>The date the 3BClean server license key expires.</description>
        <label>3BClean License Key Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3BClean_License_Key__c</fullName>
        <description>This is the licence key for the 3BClean server software.  It is generated by Microsystems or 3BView.  For questions, see Robb Allen.</description>
        <label>3BClean License Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>License Key Information</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Key Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>